# scr

./: .coveragerc  .gitignore  LICENSE  MANIFEST.in  README.md  Readme.md  dl.py  launch_scr.py  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  run_pytest.sh  run_tests.py  scr.py  scrap  scrap.py  screp  screp.py  setup.cfg  test.py  tox.ini  update_pypi.sh  update_readme_options_list.sh
.github/workflows/: tests.yml  tests.yml.disabled
scr/: __init__.py  __main__.py  args_parsing.py  backslashescape.py  chain.py  chain_options.py  chain_prototype.py  chain_spec.py  cli_args.py  config_data_class.py  content_match.py  context.py  context_options.py  definitions.py  document.py  download_job.py  driver.py  input_sequences.py  instance_options.py  locator.py  logger.py  match.py  match_chain.py  parse_cli_args.py  process_documents.py  progress_report.py  range_spec.py  scr.py  scr_context.py  scr_option.py  selenium_driver_download.py  selenium_setup.py  utils.py  version.py  windows.py  xpath_match_step.py
scr/match_steps/: js_match_step.py  match_step.py  python_format_string_match_step.py  regex_match_step.py  xpath_match_step.py
scr/selenium/: selenium_context.py  selenium_options.py  selenium_updater.py
scr/tests/: conftest.py  test_backslashescape.py  test_cli.py  test_link_normalization.py  test_progress_report.py  utils.py
scr/tests/integration_tests/: cli_env.py  conftest.py  test_basics.py  test_input_validation.py  test_integration.py  test_integration_json.py  test_live_progress.py  test_selenium.py
scr/tests/res/: a.txt.html  iframe_tree_l.html  iframe_tree_l3.html  iframe_tree_r.html
scr/transforms/: merge.py  next.py  parent.py  print.py  regex.py  sleep.py  split.py  transform.py  transform_catalog.py  transform_ref.py  up.py
scripts/: run_code_coverage.sh  run_flake8.sh  run_mypy.sh  run_pytest.sh  run_tests_local.sh  run_tox.sh  update_pypi.sh  update_readme_options_list.sh  update_requirements.sh
src/: scrap.py
src/scr/: scr.py
test/: test.py
test/cases/: basic_xpath.json  closing_doc.json  cross_origin.json  disallow_unused_match_chain_first.json  disallow_unused_match_chain_multichain.json  double_content_print.json  double_content_print_url.json  empty.json  illegal_url.json  info_verbosity.json  invalid_xpath.json  js_content.json  missing_argument.json  multichain.json  multidoc.json  nonexisting_file.json  repl.json  repl_doc_reuse.json  repl_exit.json  repl_invalid_xpath.json  selenium_c_download.json  selenium_download.json  selenium_f_download.json  tree_bfs.json  tree_dfs.json  unknown_param.json  unknown_variant_error.json
test/cases/basic/: cm_available_in_cpf.json  data_uri.json  double_content_print_url.json  info_verbosity.json  missing_argument.json  multichain.json  nonexisting_file.json  sigpipe.json  tree_dfs.json
test/cases/input_validation/: backslash_escape_fail.json  backslash_escape_fail_unicode.json  content_unavailable_in_csf.json  disallow_option_reassignment_doc.json  no_url_error.json  repl_invalid_xpath.json  unknown_format_key_in_write.json
test/cases/selenium/: closing_doc.json  dedup.json  recursive_iframes.json  repl_selenium.json
test/res/: basic.html  cross_origin.html  js_content.html  multidoc.html  non_unicode.html  recursive_iframes.html  resources.html  tree.html
tests/: __main__.py  test.py  test_cli.py
tests/cases/basic/: basic_xpath.json  cm_available_in_cpf.json  data_uri.json  data_url_download.json  data_urls.json  disallow_empty_save_path.json  double_content_print.json  double_content_print_file.json  double_content_print_url.json  empty.json  empty_cpf.json  file_download.json  file_download_file.json  file_download_url.json  fn_if_content_not_needed.json  illegal_url.json  info_verbosity.json  invalid_xpath.json  missing_argument.json  multichain.json  multidoc.json  repl_cli_doc_reuse.json  repl_immediate_exit.json  sigpipe.json  tree_bfs.json  tree_dfs.json
tests/cases/input_validation/: allow_chain_on_bool_param.json  backslash_escape_fail_unicode.json  label_format_unavailable_in_label_format.json  unknown_param.json
tests/cases/selenium/: closing_doc.json  cors.json  cross_origin.json  (+7 more)
tests/res/: closing_doc.html  cors.html  cross_origin.html  data_uri.txt  data_url.txt  data_url_plain.txt  file_url.html  iframe_tree.html  iframe_tree_l1.html  iframe_tree_l2.html  js_content.html  redundant.html  resources.html  tree_a.html
(+73 files in other folders)
