[build-system]
requires = [
    "setuptools>=60",
    "wheel>=0.37"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
markers = [
    "selenium: uses selenium with a driver for the specified browser",
    "httpbin: requires the httpbin website (and therefore network access)",
    "cmrs_io: requires the cmrs.io website (and therefore network access)",
    "repl: uses the scr repl",
]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = [
    "tbselenium.*",
    "pyrfc6266.*",
    "selenium_driver_updater.*",
    "random_user_agent.*",
    "pyreadline3.*",
]
ignore_missing_imports = true
