[metadata]
name = scr
version = attr: scr.scr.VERSION
description = Command-line Utility for Web Scraping
long_description = file: README.md
long_description_content_type = text/markdown

author = Christian Schwarz
author_email = cmrs@cmrs.io
url = https://github.com/cmrschwarz/scr

license = MIT License

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

keywords =
    web, scrape, crawl, selenium, tor,
    xpath, regex, downloader, command, shell, repl

[options]
python_requires = >=3.9
include_package_data = False
install_requires =
    tbselenium
    lxml
    selenium
    random_user_agent
    pyrfc6266
    requests
    selenium-driver-updater

packages = scr
package_dir = 
    scr=scr

[options.extras_require]
tests =
    shellescape
    json5


[options.entry_points]
console_scripts = scr = scr:main

[options.package_data]
* = "drivers/**"
