[metadata]
name = scr
version = attr: scr.scr.VERSION
description = Command-line Utility for Web Scraping
long_description = file: README.md
long_description_content_type = text/markdown

author = Christian Schwarz
author_email = cmrs@cmrs.io
url = https://github.com/cmrschwarz/scr

license = MIT License

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

keywords =
    web, scrape, crawl, selenium, tor,
    xpath, regex, downloader, command, shell, repl

[options]
python_requires = >=3.9
install_requires =
    tbselenium
    lxml
    selenium
    random_user_agent
    pyrfc6266
    requests
    selenium-driver-updater

packages = scr
include_package_data = True
package_dir =
    scr=scr

[options.extras_require]
dev =
    shellescape
    json5
    pytest
    twine
    build



[options.entry_points]
console_scripts = scr = scr:main
