[metadata]
name = scr
version = attr: scr.definitions.VERSION
description = Command-line Utility for Web Scraping
long_description = file: README.md
long_description_content_type = text/markdown

author = Christian Schwarz
author_email = cmrs@cmrs.io
url = https://github.com/cmrschwarz/scr

license = MIT License

classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

keywords =
    web, scrape, crawl, selenium, tor,
    xpath, regex, downloader, command, shell, repl

[options]
python_requires = >=3.9
install_requires = 
    lxml>=4.8

    requests>=2.27
    pyrfc6266>=1.0.1
    random-user-agent>=1.0.1

    selenium>=4.1.3
    tbselenium>=0.6.2
    selenium-driver-updater>=5.1.3

    pyreadline3>=3.4.1
    pywin32>=303;sys_platform == 'win32'



packages = scr
include_package_data = True
package_dir =
    scr=scr

[options.extras_require]
dev = 
    types-selenium
    types-requests
    types-urllib3
    types-certifi
    shellescape
    json5
    twine
    build
    mypy
    tox
    pytest
    pytest-parallel
    pytest-cov
    flake8

[options.entry_points]
console_scripts = scr = scr:main

[flake8]
max-line-length = 180
